Updating files to use config file options

--- a/dnn-sim.config
+++ b/dnn-sim.config
@@ -1,19 +1,28 @@
 # DNN-Sim configuration file
 
+# Bit-width
+-bit_width 16
+
+# Maximum buffer queue size between pipeline stages
+-max_buffer_size 8
+
 # SB
 -sb_line_length 256
 -sb_num_lines 64
 -sb_access_cycles 1
+-sb_num_ports 1
 
 # NBin
 -nbin_line_length 16
 -nbin_num_lines 64
 -nbin_access_cycles 1
+-nbin_num_ports 1
 
 # NBout
 -nbout_line_length 16
 -nbout_num_lines 64
 -nbout_access_cycles 1
+-nbout_num_ports 1
 
 # NFU-1
 -num_nfu1_pipeline_stages 3
@@ -24,5 +33,3 @@
 # NFU-3
 -num_nfu3_pipeline_stages 3
 
-# Bit-width
--bit_width 16
