Simplifying functional units. Adding functional units to the pipeline stages. Adding config params for the functional units at each stage

--- a/dnn-sim.config
+++ b/dnn-sim.config
@@ -26,10 +26,15 @@
 
 # NFU-1
 -num_nfu1_pipeline_stages 3
+-num_nfu1_multipliers 256
 
 # NFU-2
 -num_nfu2_pipeline_stages 2
+-num_nfu2_adders 240
+-num_nfu2_shifters 1
+-num_nfu2_max 1
 
 # NFU-3
 -num_nfu3_pipeline_stages 3
-
+-num_nfu3_multipliers 16
+-num_nfu3_adders 16
