Separated the functions to code_generator.h Added verbose parameter Updated Makefile

--- a/code_generator/Makefile
+++ b/code_generator/Makefile
@@ -5,9 +5,13 @@ CFLAGS=
 LDFLAGS=-lpthread
 DEBUG?=0
 
-CLASSIFY=classify
-SRC=src
-OBJ=../obj
+TARGET=classify
+SRC=.
+OBJ=obj
+
+CPP_FILES=$(wildcard *.cpp)
+OBJ_FILES=$(addprefix $(OBJ)/,$(notdir $(CPP_FILES:.cpp=.o)))
+DEP_FILES=$(addprefix $(OBJ)/,$(notdir $(CPP_FILES:.cpp=.d)))
 
 ifeq ($(DEBUG), 1)
 	CFLAGS+=-g
@@ -16,11 +20,16 @@ else
 endif
 
 
-all: $(CLASSIFY).o
-	$(CPP) -o classify ../obj/cp_inst.o classify.o $(LDFLAGS)
+all: dir $(TARGET)
 
-$(CLASSIFY).o: classify.cpp
-	$(CPP) -c -o $@ $^ $(LDFLAGS)
+dir:
+	@mkdir -p $(OBJ)
+
+$(OBJ)/%.o: $(SRC)/%.cpp
+	$(CPP) $(CFLAGS) -MMD -c $< -o $@
+
+$(TARGET): $(OBJ_FILES) 
+	$(CPP) -o $@ $^ ../obj/cp_inst.o $(LDFLAGS)
 
 clean:
 	rm -rf $(TARGET) $(OBJ) *~
