updated buffered sample_code to match our current iteration order. moved input dir. started bubble_up.pl to find best buffer entry reordering

--- a/sample_code/buffered/Makefile
+++ b/sample_code/buffered/Makefile
@@ -11,7 +11,7 @@ all: $(EXES)
 $(LAYER): $(TYPE).cpp $(LAYER).h
 		$(CC) -o $@ $(filter %.cpp, $^) $(CFLAGS)
 
-conv: conv.cpp config.h 
+conv: conv.cpp  
 		$(CC) -o $@ $(filter %.cpp, $^) $(CFLAGS)
 
 clean:
