Initial commit for simple power model

--- a/dnn-sim.config
+++ b/dnn-sim.config
@@ -41,3 +41,13 @@
 
 # Layer parameter
 -num_outputs 256
+
+
+# Power model
+# -sb_acc_eng 
+# -nbin_acc_eng 
+# -nbout_acc_eng 
+-int_mult_16_eng 0.8
+-fp_mult_16_eng 1.1
+-int_add_16_eng 0.06
+-fp_add_16_eng 0.45
